Refactor Code Smell